<resources>
    <string name="app_name">Bokeh</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="todo_item_placeholder_text">Todo Item</string>
    <string name="date_placeholder_text">dd/mm</string>
    <string name="label_due_date">Due Date</string>
    <string name="title_todos">To-Do</string>
    <string name="title_goals">Goals</string>
    <string name="todo_description_hint">Here\'s what I need to do...</string>
    <string name="todo_title_hint">What needs done?</string>
    <string name="date_created">Date Created</string>
    <string name="date_completed">Date Completed</string>
    <string name="save">Save</string>
    <string name="edit_todo_frag_label">Edit To-Do Item</string>
</resources>